# ROS_con-assignment

./: .gitignore  ASSIGNMENT.md  README.md
src/bme_gazebo_sensors_py/: package.xml  setup.cfg  setup.py
src/bme_gazebo_sensors_py/bme_gazebo_sensors_py/: chase_the_ball.py  gps_waypoint_follower.py  haversine_test.py  image_republisher.py  object_detection.py  set_target_client.py
src/bme_ros2_navigation/: CMakeLists.txt  package.xml
src/bme_ros2_navigation/config/: gz_bridge.yaml
src/bme_ros2_navigation/launch/: check_urdf.launch.py  localization.launch.py  localization_slam_toolbox.launch.py  mapping.launch.py  navigation.launch.py  navigation_with_slam.launch.py  spawn_robot.launch.py  world.launch.py
src/bme_ros2_navigation/maps/: my_map.pgm  my_map.yaml  serialized.data
src/bme_ros2_navigation/meshes/: forearm.SLDPRT  forearm.STEP  forearm.blend  shoulder.SLDPRT  shoulder.STEP  shoulder.blend  upper_arm.SLDPRT  upper_arm.STEP  upper_arm.STL  upper_arm.blend  upper_arm.dae  wrist.SLDPRT  wrist.STL  wrist.blend  wrist.dae
src/bme_ros2_navigation/rviz/: navigation.rviz
src/bme_ros2_navigation/urdf/: mogi_arm.gazebo  mogi_bot.gazebo  mogi_bot.urdf
src/bme_ros2_simple_arm/: CMakeLists.txt  package.xml
src/bme_ros2_simple_arm_py/: package.xml  setup.cfg  setup.py
src/explore/: CMakeLists.txt
src/mogi_trajectory_server/: README.md  package.xml  setup.cfg  setup.py
src/object_finder/: package.xml  setup.py
src/object_finder/launch/: full_launch.py
src/object_finder/object_finder/: controller_node.py
src/videeps_pkg/: CMakeLists.txt  package.xml
(+22 files in other folders)
